--- a/style.css
+++ b/style.css
@@ -4,3 +4,15 @@ div {
   margin: 0 auto;
   align-items: center;
 }
+
+h1 {
+  color: darkgreen;
+}
+
+.lemon {
+  color: lemonchiffon;
+}
+
+#blueBerry {
+  color: mediumslateblue;
+}
