overriting all my paragraphs with classes and one ID

--- a/style.css
+++ b/style.css
@@ -9,10 +9,20 @@ h1 {
   color: darkgreen;
 }
 
+/* CLASSES */
 .lemon {
   color: lemonchiffon;
 }
 
+.apple {
+  color: greenyellow;
+}
+
+.lime {
+  color: lime;
+}
+
+/* ID */
 #blueBerry {
   color: mediumslateblue;
 }
